package com.directi.training.lsp.exercise_refactored;

public interface Duck {
    public void quack();
    public void swim();
}
